# A-Team_AA-Team-Assignment_2024

./: README.md  pyproject.toml
aa_team_assignment/: data_exploration.ipynb  main.ipynb  temporal_patterns_and_seasonality.ipynb
aa_team_assignment/.ipynb_checkpoints/: main-checkpoint.ipynb
data/: test.csv
